--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs :
         - name : Checkout code
           uses : actions/checkout@v3
 
-        - name : Set up Python@v4
+        - name : Set up Python
           uses : actions/setup-python@v4
           with :
                  python-version : '3.10'
